# GumTrace

./: .gitignore  CMakeLists.txt  build_android.sh  main.c
libs/: FridaGum-Android-17.6.2.h  FridaGum-IOS-17.6.2.h
src/: CallbackContext.cpp  CallbackContext.h  FuncPrinter.cpp  FuncPrinter.h  GumTrace.cpp  GumTrace.h  Utils.cpp  Utils.h  main.cpp
